# zsh-fzf-artisan

./: Cargo.toml  README.md  artisan.plugin.zsh  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: main.rs  native.rs  values.rs  wellknown.rs
